--- a/css/style_slang.css
+++ b/css/style_slang.css
@@ -64,6 +64,20 @@
   width:1024px !important;
 }
 
+#sub-slang-features-of-slang-the-slang-factory-remodelling{
+  background:url('images/9-12/Language_and_Culture/Slang/Features_Of_Slang/Slang_Factory/Remodelling/Start_Layout.png') no-repeat;
+  height:748px !important;
+  overflow:hidden !important;
+  width:1024px !important;
+}
+
+#sub-slang-features-of-slang-the-slang-factory-affixation{
+  background:url('images/9-12/Language_and_Culture/Slang/Features_Of_Slang/Slang_Factory/Affixation/Affication_BG.png') no-repeat;
+  height:748px !important;
+  overflow:hidden !important;
+  width:1024px !important;
+}
+
 #sub-slang-features-of-slang-the-poetry-of-slang-onomatopoeia .bptitleholder{
 	width: 627px;
 	height: 68px;
@@ -415,8 +429,21 @@ color: #FFFFFF;
 	font-size: 18px;
 	font-weight: normal;
 	color: #000000;
-	
+}
 
+#navSlang-Affixation{
+	position: absolute;
+	left: 115px;
+	top: 110px;
+	width: 815px;
+	height: 393px;
+	overflow: auto;
+	text-align: left;
+	font-family: comic sans ms;
+	font-size: 18px;
+	font-weight: normal;
+	color: #000000;
+	z-index: 3;
 }
 
 .slang_school-bx{
@@ -518,6 +545,15 @@ color: #FFFFFF;
 	z-index:999;
 }
 
+#gobutton{
+	top: 533px;
+	left: 444px;
+	position: absolute;
+	height: 83px;
+	width: 100px;
+	z-index:999;
+}
+
 #blinking-eyes{
 	background: url('images/9-12/Language_and_Culture/Slang/Features_Of_Slang/Slang_Factory/sprite_blink.png') no-repeat;
 	display: none;
@@ -610,4 +646,158 @@ color: #FFFFFF;
 	position: absolute;
 	height: 49px;
 	width: 150px;
+}
+
+#Sprite-Dialog{
+	background: url('images/9-12/Language_and_Culture/Slang/Features_Of_Slang/Slang_Factory/Affixation/Sprite_Dialog.png') no-repeat;
+	display: none;
+	top: 90px;
+	left: 60px;
+	position: absolute;
+	height: 545px;
+	width: 910px;
+}
+
+#man-waiting{
+	background: url('images/9-12/Language_and_Culture/Slang/Features_Of_Slang/Slang_Factory/Affixation/Sprite_Man_Waiting.png') no-repeat;
+	display: none;
+	top: 323px;
+	left: 260px;
+	position: absolute;
+	height: 320px;
+	width: 275px;
+}
+
+#man-blowing{
+	background: url('images/9-12/Language_and_Culture/Slang/Features_Of_Slang/Slang_Factory/Affixation/Sprite_Man_Blowing.png') no-repeat;
+	display: none;
+	top: 339px;
+	left: 298px;
+	position: absolute;
+	height: 350px;
+	width: 300px;
+}
+
+#man-about-to-blow{
+	background: url('images/9-12/Language_and_Culture/Slang/Features_Of_Slang/Slang_Factory/Affixation/Sprite_Man_About_To_Blow.png') no-repeat;
+	display: none;
+	top: 323px;
+	left: 260px;
+	position: absolute;
+	height: 320px;
+	width: 275px;
+	z-index: 999;
+}
+
+#container-box{
+	background: url('images/9-12/Language_and_Culture/Slang/Features_Of_Slang/Slang_Factory/Affixation/Sprite_Machine.png') no-repeat;
+	display:none;
+	top: 232px;
+	left: 423px;
+	position: absolute;
+	height: 449px;
+	width: 412px;
+	z-index: 99;
+}
+
+#glowing-door{
+	background: url('images/9-12/Language_and_Culture/Slang/Features_Of_Slang/Slang_Factory/Affixation/Sprite_Door_Glow.png') no-repeat;
+	display: none;
+	top: 367px;
+	left: 875px;
+	position: absolute;
+	height: 250px;
+	width: 85px;
+	z-index: 99999;
+}
+
+#greyed-door{
+	background: url('images/9-12/Language_and_Culture/Slang/Features_Of_Slang/Slang_Factory/Affixation/Sprite_Door_Onclick.png') no-repeat;
+	display: none;
+	top: 375px;
+	left: 885px;
+	position: absolute;
+	height: 235px;
+	width: 75px;
+	z-index: 99999;
+}
+
+#ceiling_patch{
+	background: url('images/9-12/Language_and_Culture/Slang/Features_Of_Slang/Slang_Factory/Affixation/Sprite_Ceiling_Patch.png') no-repeat;
+	display:none;
+	top: -8px;
+	left: 806px;
+	position: absolute;
+	height: 210px;
+	width: 144px;
+	z-index: 999990;
+}
+
+#floor_patch{
+	background: url('images/9-12/Language_and_Culture/Slang/Features_Of_Slang/Slang_Factory/Affixation/Sprite_Floor_Patch.png') no-repeat;
+	display:none;
+	top: 595px;
+	left: 118px;
+	position: absolute;
+	height: 136px;
+	width: 175px;
+	z-index: 999990;
+}
+
+#word_1{
+	display: none;
+	top: 113px;
+	left: 750px;
+	position: absolute;
+	height: 45px;
+	width: 160px;
+	background: #eeeeee;
+	-webkit-transform: rotate(-53deg);
+}
+
+#word_2{
+	display: none;
+	top: 235px;
+	left: 676px;
+	position: absolute;
+	height: 45px;
+	width: 160px;
+	background: #eeeeee;
+	-webkit-transform: rotate(-47deg);
+}
+
+#word_3{
+	display: none;
+	top: 242px;
+	left: 380px;
+	position: absolute;
+	height: 45px;
+	width: 160px;
+	background: #eeeeee;
+	-webkit-transform: rotate(-145deg);
+}
+
+#word_4{
+	display: none;
+	top: 175px;
+	left: 148px;
+	position: absolute;
+	height: 45px;
+	width: 160px;
+	background: #eeeeee;
+	-webkit-transform: rotate(-90deg);
+}
+
+#word1_text{
+	display: block;
+	font-size: 18px;
+	padding: 9px 0px 0px 0px;
+	text-align: center;
+}
+
+#word3_text{
+	display: block;
+	font-size: 18px;
+	padding: 9px 0px 0px 0px;
+	text-align: center;
 }
